fixing iphone body overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,7 +48,10 @@ body {
 html,
 body {
   overflow: hidden;
+  position: relative;
   height: 100%;
+  touch-action: none;
+  -ms-touch-action: none;
 }
 * {
   margin: 0;
@@ -572,6 +575,7 @@ option[value="tahoma"] {
   .canvas-container canvas {
     max-height: 100%;
     margin-bottom: unset;
+    margin-top: unset;
   }
   .controls h2 {
     font-size: 3.157rem;
